<resources>
    <string name="app_name">TestCamera</string>
    <string name="title_activity_main">TestCamera</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_network">Network</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->

    <string name="action_settings">Settings</string>
    <string name="server_port_preference">Server Port</string>
    <string name="alphaVideo_accuracy_preference">Alpha Video Accuracy</string>
    <string name="alphaVideo_alphaColor_preference">Alpha Video AlphaColor</string>
    <string name="rtsp_camera_address_preference">RTSP Camera Address</string>
    <string name="pref_header_video">Video</string>
    <string name="pref_header_general">General</string>
    <string name="show_actionBar_preference">Show ActionBar</string>
</resources>
